# block-graph

./: CMakeLists.txt  INSTALL  LICENSE  README  README.md
lib/: CMakeLists.txt  array.cpp  array.h  bit-vector.cpp  bit-vector.h  build.cpp  divsufsort.h  extract.cpp  graph.cpp  graph.h  rank-vigna.cpp  rank-vigna.h  rank.h  rank9b.cpp  rank9b.h  rmq-succinct.cpp  rmq-succinct.h  rmq.h  stopwatch.h  text.cpp  text.h  utility.cpp  utility.h
src/: CMakeLists.txt  build.cpp  extract.cpp  generate-extract-file.cpp
tests/: CMakeLists.txt  test-array.cpp  test-bit-vector.cpp  test-extract-extensive.cpp  test-extract.cpp  test-rank.cpp  test-text.cpp
